--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoContext": "Server=(localdb)\\mssqllocaldb;Database=Hobbies;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "HobbiesContext": "Server=(localdb)\\mssqllocaldb;Database=Hobbies;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
